Bug 311154 - KDiamond does not save theme settings
Summary: KDiamond does not save theme settings
Status: RESOLVED FIXED
Alias: None
Product: kdiamond
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Stefan Majewsky
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-04 16:16 UTC by Rohan Garg
Modified: 2012-12-11 22:39 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rohan Garg 2012-12-04 16:16:17 UTC
The theme settings for KDiamond are not preserved after restarting KDiamond

Reproducible: Always

Steps to Reproduce:
1. Change theme to 'Diamonds'
2. Close KDiamonds
3. Open KDiamonds
Actual Results:  
Theme is reverted back to 'Default'

Expected Results:  
Theme should have been 'Diamonds'

Can be reproduced from git
Comment 1 Christoph Feck 2012-12-04 23:49:13 UTC
Cannot reproduce, on today's master.
Comment 2 Christoph Feck 2012-12-04 23:51:08 UTC
Actually, I can reproduce when closing KDiamonds via "File > Quit" menu item. Using the Close button in the window decoration works.
Comment 3 Christoph Feck 2012-12-05 00:03:45 UTC
https://git.reviewboard.kde.org/r/107586/
Comment 4 Christoph Feck 2012-12-06 14:57:13 UTC
Git commit 29a4942d855ae768d1367f5f0df350cb7f6c368d by Christoph Feck.
Committed on 06/12/2012 at 15:55.
Pushed by cfeck into branch 'master'.

Fix settings not saved on Quit
FIXED-IN: 4.10
REVIEW: 107586

M  +1    -1    src/mainwindow.cpp

http://commits.kde.org/kdiamond/29a4942d855ae768d1367f5f0df350cb7f6c368d
Comment 5 Albert Astals Cid 2012-12-08 15:25:43 UTC
Now that we are having a 4.9.5 maybe makes sense to backport?
Comment 6 Christoph Feck 2012-12-11 22:39:30 UTC
Git commit 00013ad5ee67cfc745cb46f2200e040be5b22a3e by Christoph Feck.
Committed on 06/12/2012 at 15:55.
Pushed by cfeck into branch 'KDE/4.9'.

Fix settings not saved on Quit
FIXED-IN: 4.9.5
REVIEW: 107586
(cherry picked from commit 29a4942d855ae768d1367f5f0df350cb7f6c368d)

M  +1    -1    src/mainwindow.cpp

http://commits.kde.org/kdiamond/00013ad5ee67cfc745cb46f2200e040be5b22a3e