Fix settings not saved on Quit

BUG: 311154
FIXED-IN: 4.9.5
REVIEW: 107586
(cherry picked from commit 29a4942d855ae768d1367f5f0df350cb7f6c368d)